# shortcutpy

./: .gitignore  DEV.md  MANIFEST.in  README.md  pyproject.toml
examples/: README.md  choose_tone.py  conditionals.py  get_current_weather.py  get_current_weather.shortcut  hello_world.py  raw_action_alert.py  repeats.py  resize_images.py  timestamp_discord.original.txt  timestamp_discord.py
scripts/: sync_cherri_actions.py
shortcutpy/: __init__.py  action_catalog.json  action_catalog.py  cli.py  compiler.py  dsl.py  dsl.pyi  shortcuts_db.py
tests/: test_cli.py  test_compiler.py  test_generated_actions.py  test_shortcuts_db.py
